test/Tests/Components/FloatWidth.golden

test\Tests\Components\FloatWidth.hs:31:12: error:
    * Incompatible scalars within Location 0:
        - V 2 Float with Location 0, Component 0 requires Float,
        - Double with Location 0, Component 2 requires Double.
    * In the second argument of `($)', namely
        `entryPoint
           @"main" @Vertex
           do ~(Vec2 x y) <- get @"in_col1"
              z <- get @"in_col2"
              put @"out_col" (Vec4 x y (convert z) 1)'
      In the expression:
        Module
          $ entryPoint
              @"main" @Vertex
              do ~(Vec2 x y) <- get @"in_col1"
                 z <- get @"in_col2"
                 put @"out_col" (Vec4 x y (convert z) 1)
      In an equation for `program':
          program
            = Module
                $ entryPoint
                    @"main" @Vertex
                    do ~(Vec2 x y) <- get @"in_col1"
                       z <- get @"in_col2"
                       put @"out_col" (Vec4 x y (convert z) 1)
   |
31 |   Module $ entryPoint @"main" @Vertex do
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
